--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.scroll-container::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  .scroll-container::-webkit-scrollbar-thumb {
+    
+    background-color: #3b6cfff8; /* Change color as needed */
+    border-radius: 50px;
+    
+  }
+  
+  .scroll-container::-webkit-scrollbar-track {
+    background-color: #f0f0f0; /* Change color as needed */
+    border-radius: 6px;
+    
+  }
+  
+  /* Optional: Style scrollbar on hover */
+  .scroll-container:hover::-webkit-scrollbar-thumb {
+    background-color: #362fbb; /* Change color as needed */
+  }
